[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myo_sam"
requires-python = ">=3.9"
version = "0.1.0"
maintainers = [
  {name = "Giorgi Nozadze", email = "giorginozadze23@yahoo.com"}
]
description = "Fine-Tuning SAM for Instance Segmentation of Myotube Microscopy Images"
dependencies = [
  "torch>=1.12.0",
  "numpy>=1.25.1"
  "torchvision>=0.13.0",
  "hydra-core>=1.3.0",
  "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
  "monai>=1.2.0"
]
keywords = ["SAM", "Computer Vision", "Instance Segmentation", "Myotube", "Microscopy"]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
inference = [
  "opencv-python-headless>=4.8",
  "tensorflow>=2.15",
  "stardist>=0.8.5",
  "pydantic>=2.3.0",
  "networkx>=3.1"
]

dev = ["mypy", "pre-commit", "ruff"]
test = ["coverage", "pytest"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "snapshots*", "scripts*"]

[tool.ruff]
line-length = 79
