[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myo_sam"
requires-python = ">=3.9"
version = "0.1.0"
maintainers = [
  {name = "Giorgi Nozadze", email = "giorginozadze23@yahoo.com"}
]
description = "Fine-Tuning SAM for Instance Segmentation of Myotube Microscopy Images"
dependencies = [
  "torch>=1.12.0",
  "numpy>=1.21.0",
  "torchvision>=0.13.0",
  "hydra-core>=1.3.0",
  "omegaconf>=2.1.0",
  "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
  "monai>=1.2.0"
]
keywords = ["SAM", "Computer Vision", "Instance Segmentation", "Myotube", "Microscopy", "myovision"]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
inference = [
  "opencv-python-headless>=4.0",
  "pydantic>=2.0.0",
  "networkx>=3.0",
  "MetricsReloaded @ git+https://github.com/Project-MONAI/MetricsReloaded.git"
]
stardist = ["tensorflow>=2.0", "stardist>=0.8.5"]

dev = ["mypy", "pre-commit", "ruff"]
test = ["coverage", "pytest"]

all = ["myo_sam[inference, stardist]"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "snapshots*", "scripts*"]

[tool.ruff]
line-length = 79
